--- a/src/_partials/about.pug
+++ b/src/_partials/about.pug
@@ -33,10 +33,10 @@
         .row
           .col-auto.d-flex.align-items-center
             a(href="https://safe.trade/" target="_blank")
-              img(src="assets/img/safetrade.png" alt="SafeTrade")
+              img(src="/assets/img/safetrade.png" alt="SafeTrade")
           .col-auto.d-flex.align-items-center
             a(href="https://tradeogre.com/" target="_blank") 
-              img(src="assets/img/tradeogre.svg" alt="TradeOgre")
+              img(src="/assets/img/tradeogre.svg" alt="TradeOgre")
 
       h2 PPSTI reward system
       p The pool uses the PPSTI (Payment per share for time intervals) system to calculate rewards. This is a modified version of the PPS (Pay-Per-Share) payment system. 
