--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -5,8 +5,8 @@ block styles
 block scripts
   if !starter
     // Plugins and scripts required by this view
-    script(src='node_modules/@coreui/utils/dist/umd/index.js')
-    script(src='js/main.js')
+    script(src='/vendors/@coreui/utils/js/index.js')
+    script(src='/js/main.js')
 
 block breadcrumb
     +breadcrumb(
