--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -67,7 +67,7 @@ header.header.header-sticky.p-0.mb-4
       li.nav-item.dropdown
         a.nav-link.py-0.pe-0(data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false")
           .avatar.avatar-md
-            img.avatar-img(src="assets/img/avatars/1.jpg" alt="user")
+            img.avatar-img(src="/assets/img/avatars/1.jpg" alt="user")
         .dropdown-menu.dropdown-menu-end.pt-0
           .dropdown-header.bg-body-tertiary.text-body-secondary.fw-semibold.rounded-top.mb-2 Account
           a.dropdown-item(href="profile.html")
