--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -5,7 +5,7 @@ block styles
 block scripts
   if !starter
     // Plugins and scripts required by this view
-    script(src='js/main.js')
+    script(src='/js/main.js')
 
 
 block breadcrumb
