--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,7 +5,7 @@ block styles
 block scripts
   if !starter
     // Plugins and scripts required by this view
-    script(src='node_modules/@coreui/utils/dist/umd/index.js')
+    script(src='/vendors/@coreui/utils/js/index.js')
     script(src='/js/main.js')
 
 block view
@@ -34,7 +34,7 @@ block view
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-success
+            .card.text-white.bg-warning
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
@@ -46,7 +46,7 @@ block view
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-warning
+            .card.text-white.bg-success
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
@@ -82,7 +82,7 @@ block view
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-danger
+            .card.text-white.bg-warning
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
