fix display color logo in public

--- a/src/_layout/public.pug
+++ b/src/_layout/public.pug
@@ -15,7 +15,8 @@ html(lang='en')
       header.header.header-sticky.p-0.mb-4
         .container-fluid.border-bottom.px-4
           .sidebar-brand
-            img.sidebar-brand-full(src='/assets/logo.png', alt='Qubic Proxy Pool', style="height:45px")
+            img.sidebar-brand-full.sidebar-brand-public-light(src='/assets/logo.png', alt='Qubic Proxy Pool', style="height:45px")
+            img.sidebar-brand-full.sidebar-brand-public-dark(src='/assets/logo_dark.png', alt='Qubic Proxy Pool', style="height:45px")
 
           ul.header-nav.header-nav-center.d-none.d-lg-flex
             li.nav-item
