--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -26,10 +26,10 @@ block view
             tbody
               tr
                 td(scope="row") Username:
-                td jhonminer 
+                td= login 
               tr 
                 td(scope="row") Email:
-                td jhon@yahoo.com
+                td= email
               tr 
                 td(scope="row") Qubic wallet: 
-                td KNIJXAGWQREUSFCFOHGRBAZNAQZAILFQBPFRVWPOECGPFNATPBDOCWUCZKMN
+                td= wallet
