add update template and add receive

--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -36,11 +36,11 @@ header.header.header-sticky.p-0.mb-4
             use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-telegram-plane")
       li.nav-item.py-1
         .vr.h-100.mx-2.text-body.text-opacity-75
-      li.nav-item.dropdown
+      //--li.nav-item.dropdown
         a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://discord.com/channels/@QubicProxyPool" target="_blank" title="Discord channel QubicProxyPool")
           svg.icon.icon-lg
             use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-discord")
-      li.nav-item.py-1
+      //--li.nav-item.py-1
         .vr.h-100.mx-2.text-body.text-opacity-75
       li.nav-item.dropdown
         button.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(type="button" aria-expanded="false" data-coreui-toggle="dropdown")
