--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -64,7 +64,7 @@ block view
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-dollar")
                     |
-                .fs-4.fw-semibold 0.00000739$
+                .fs-4.fw-semibold 0.000005$
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Qubic price
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
