--- a/src/_layout/public.pug
+++ b/src/_layout/public.pug
@@ -33,11 +33,11 @@ html(lang='en')
                   use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-telegram-plane")
             li.nav-item.py-1
               .vr.h-100.mx-2.text-body.text-opacity-75
-            li.nav-item.dropdown
+            //--li.nav-item.dropdown
               a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://discord.com/channels/@QubicProxyPool" target="_blank" title="Discord channel QubicProxyPool")
                 svg.icon.icon-lg
                   use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-discord")
-            li.nav-item.py-1
+            //--li.nav-item.py-1
               .vr.h-100.mx-2.text-body.text-opacity-75
 
             li.nav-item.dropdown
