--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -15,7 +15,7 @@ block view
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-user")
                     |
                     |
-                input.form-control(name="user" type='text', placeholder='Username [0-9A-Za-z, min 5]' pattern="^[\dA-Za-z]+$" minlength="5" required)
+                input.form-control(name="login" type='text', placeholder='Username [0-9A-Za-z, min 5]' pattern="^[\dA-Za-z]+$" minlength="5" required)
               .input-group.mb-3
                 span.input-group-text
                   svg.icon
