--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -8,7 +8,7 @@ header.header.header-sticky.p-0.mb-4
       li.nav-item
         a.nav-link.active(href="/") Dashboard
       li.nav-item
-        a.nav-link(href="/calc/") Calculate
+        a.nav-link(href="/panel/calc/") Calculate
       //li.nav-item
         a.nav-link(href="/epochs/") Epochs
     //--ul.header-nav.ms-auto
