--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -20,76 +20,85 @@ block view
 
 
       .mb-4
-        .row.g-4
+        .row.g-4(id="main-info")
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-info
+            .card.text-white.bg-info(class="info-active-workers")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-people")
                     |
-                .fs-4.fw-semibold 45
-                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Active miners
+                .fs-4.fw-semibold 
+                  span 45
+                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Active workers
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-warning
+            .card.text-white.bg-success(class="info-hashrate")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-speedometer")
                     |
-                .fs-4.fw-semibold 400 It/s
+                .fs-4.fw-semibold
+                  span 0
+                  | #{" "}It/s
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Total It/s
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-success
+            .card.text-white.bg-warning(class="info-solutions")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-basket")
                     |
-                .fs-4.fw-semibold 155
+                .fs-4.fw-semibold
+                  span 0
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Solutions
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-primary
+            .card.text-white.bg-primary(class="info-price")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-dollar")
                     |
-                .fs-4.fw-semibold 0.000005$
+                .fs-4.fw-semibold 
+                  span 0.000000
+                  | $
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Qubic price
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-info
+            .card.text-white.bg-danger(class="info-sol-price")
+              .card-body
+                .text-white.text-opacity-75.text-end
+                  svg.icon.icon-xxl
+                    use(xlink:href="/vendors/@coreui/icons/free.svg#cil-cash")
+                    |
+                .fs-4.fw-semibold 
+                  span -0
+                  | $
+                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Sol price
+                .progress.progress-white.progress-thin.mt-3
+                  .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
+          // /.col
+          .col-6.col-lg-4.col-xl-3.col-xxl-2
+            .card.text-white.bg-info(class="info-network")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
                     use(xlink:href="/vendors/@coreui/icons/free.svg#cil-swap-horizontal")
                     |
-                .fs-4.fw-semibold 21 266 437
+                .fs-4.fw-semibold
+                  span 0
                 .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Est. network It/s
-                .progress.progress-white.progress-thin.mt-3
-                  .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          // /.col
-          .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-warning
-              .card-body
-                .text-white.text-opacity-75.text-end
-                  svg.icon.icon-xxl
-                    use(xlink:href="/vendors/@coreui/icons/free.svg#cil-alarm")
-                    |
-                .fs-4.fw-semibold -60 sec.ago
-                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Last update
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
