--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -106,7 +106,7 @@ block view
 
       .mb-4
         .table-responsive
-          table.table.table-striped.border.mb-0
+          table.table.table-striped.border.mb-0(id="table-miners")
             thead.fw-semibold.text-nowrap
               tr.align-middle
                 th.bg-body-secondary Miners
@@ -114,7 +114,7 @@ block view
                 th.bg-body-secondary Hashrate
                 th.bg-body-secondary Solutions
             tbody
-              tr.align-middle
+            //--  tr.align-middle
                 td fa*****
                 td 15
                 td 921 It/s
