--- a/src/_partials/about.pug
+++ b/src/_partials/about.pug
@@ -14,12 +14,12 @@ ul
 br
 
 h2 Donate
-p Qubic:
+p Qubic coin:
   | 
   span.text-info KNIJXAGWQREUSFCFOHGRBAZNAQZAILFQBPFRVWPOECGPFNATPBDOCWUCZKMN
 br
 
-h2 Exchanges with Qubic
+h2 Exchanges with Qubic coin
 .container.text-center.exchanges-icons
   .row
     .col-auto.d-flex.align-items-center
