--- a/src/_partials/head.pug
+++ b/src/_partials/head.pug
@@ -2,6 +2,8 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
 title Qubic Proxy Pool
+<meta name="description" content="Pool for cooperative mining in the Qubic crypto  network"> 
+<meta name="Keywords" content="qubic,pool,crypto,coin"> 
 
 link(rel='apple-touch-icon', sizes='57x57', href='/assets/favicon/apple-icon-57x57.png')
 link(rel='apple-touch-icon', sizes='60x60', href='/assets/favicon/apple-icon-60x60.png')
