fix miners table and rename calc page

--- a/src/_partials/sidebar.pug
+++ b/src/_partials/sidebar.pug
@@ -27,10 +27,10 @@
         svg.nav-icon
           use(xlink:href="/vendors/@coreui/icons/free.svg#cil-speedometer")
         |  Dashboard
-      a.nav-link(href='/panel/calc/')
+      a.nav-link(href='/panel/stats/')
         svg.nav-icon
           use(xlink:href="/vendors/@coreui/icons/free.svg#cil-description")
-        |  Calculate
+        |  Statistics
         //--span.badge.badge-sm.bg-info.ms-auto NEW
     //li.nav-item
       a.nav-link(href='/panel/epochs/')
