--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -12,7 +12,7 @@ block breadcrumb
     +breadcrumb(
     [
       { href: '/', label: 'Home'},
-      { label: 'Calculate'}
+      { label: 'Statistics'}
     ]
   )
 
@@ -115,7 +115,7 @@ block view
                   th.bg-body-secondary(title="Average hashrate in the epoch") Avg. hashrate
                   th.bg-body-secondary(title="Percentage of total contribution") Prct. (PPSTI)
                   th.bg-body-secondary(title="Solutions") Sol
-                  th.bg-body-secondary(title="Сalculated number of solutions") Calc. sol
+                  th.bg-body-secondary(title="Сalculated number of solutions") Projected revenue
               tbody
                 tr.align-middle
                   td.text-info 
