--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -83,20 +83,21 @@ block view
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-info(class="info-network")
+            .card.text-white.bg-danger(class="info-sol-price")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
-                    use(xlink:href="/vendors/@coreui/icons/free.svg#cil-swap-horizontal")
+                    use(xlink:href="/vendors/@coreui/icons/free.svg#cil-cash")
                     |
-                .fs-4.fw-semibold
+                .fs-4.fw-semibold 
                   span 0
-                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Est. network It/s
+                  | $
+                .small.text-white.text-opacity-75.text-uppercase.fw-semibold.text-truncate Sol price
                 .progress.progress-white.progress-thin.mt-3
                   .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
           // /.col
           .col-6.col-lg-4.col-xl-3.col-xxl-2
-            .card.text-white.bg-danger(class="info-age")
+            .card.text-white.bg-info(class="info-age")
               .card-body
                 .text-white.text-opacity-75.text-end
                   svg.icon.icon-xxl
