--- a/src/_layout/public.pug
+++ b/src/_layout/public.pug
@@ -54,7 +54,8 @@ html(lang='en')
             li.nav-item.py-1
               .vr.h-100.mx-2.text-body.text-opacity-75
             li.nav-item.dropdown
-              a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/QubicProxyPool" target="_blank" title="Telegram channel QubicProxyPool")
+              a.btn.btn-link.nav-link.py-2.px-2.d-flex.align-items-center(href="https://t.me/+NjIJIWJMnGg0YjM6" target="_blank" title="Telegram channel QubicProxyPool")
+                | Telegram
                 svg.icon.icon-lg
                   use(xlink:href="/vendors/@coreui/icons/brand.svg#cib-telegram-plane")
             li.nav-item.py-1
