--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -34,6 +34,7 @@ block view
                   th.bg-body-secondary(title="Average hashrate in the epoch") Avg. hashrate
                   th.bg-body-secondary.text-center Activity in the epoch
                   th.bg-body-secondary.text-center Status
+                  th.bg-body-secondary Start activity
                   th.bg-body-secondary Last activity
               tbody
                 each worker in workers
@@ -63,6 +64,7 @@ block view
                       else
                         <span class="badge me-1 bg-dark">Dead</span>
                     td= worker[3]
+                    td= worker[4]
 
       .mb-4    
         h2 Miners
