--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -21,10 +21,13 @@ block view
     .col-md-12
       .mb-4
         .progress(style='height: 3rem; font-size: 1.8em; font-weight: bold; background-color: rgb(50, 58, 73)')
-          .progress-bar.bg-info.progress-bar.progress-bar-striped.progress-bar-animated(id="epoch-progress" role='progressbar' style='width: 10%; overflow: visible;' aria-valuenow='50' aria-valuemin='0' aria-valuemax='100')
+          .progress-bar.bg-info.progress-bar.progress-bar-striped.progress-bar-animated(id="epoch-progress" role='progressbar' style='width: 0%; overflow: visible;' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100')
             span(style="margin: 0.5em;") Qubic epoch
               | 
-              span.value 101: 53.5%
+              span.value 0: 0%
+              
+      p.text-info 
+        b Calculation update every 10 minutes
       .mb-4
         .table-responsive
             table.table.table-striped.border.mb-0
@@ -79,27 +82,21 @@ block view
                   th.bg-body-secondary(title="Potential solutions per epoch") Potential sols
                   th.bg-body-secondary(title="Potential revenue per epoch") Potential revenue
               tbody
-                //--tr.align-middle
-                  td.text-info 
-                    b User 1
-                  td.text-info
-                    b 921 It/s
-                  td.text-info
-                    b 8.12%
-                  td.text-info
-                    b 3
-                  td.text-info
-                    b 3.2
-                  td.text-info
-                    b 3.2
                 each user in users
-                  tr
-                    td= user[0]
-                    td #{user[1]} It/s
-                    td #{user[2]}%
-                    td= user[3]
-                    td= user[4]
-                    td #{user[5]}$
-               
-    // /.col
-  // /.row
+                  if user[6]
+                    tr.align-middle.fw-bolder
+                      td.text-info= user[0]
+                      td.text-info #{user[1]} It/s
+                      td.text-info #{user[2]}%
+                      td.text-info= user[3]
+                      td.text-info= user[4]
+                      td.text-info #{user[5]}$
+                  else 
+                    tr.align-middle
+                      td= user[0]
+                      td #{user[1]} It/s
+                      td #{user[2]}%
+                      td= user[3]
+                      td= user[4]
+                      td #{user[5]}$
+
