add update page btn for statistics

--- a/src/views/stats.pug
+++ b/src/views/stats.pug
@@ -26,7 +26,9 @@ block view
               | 
               span.value 0: 0%
               
-      p.text-info 
+      p.d-flex.align-items-center.text-info 
+        a.btn.btn-info(href="javascript:window.location.reload(true)") Update
+        span(style="width:1em")
         b Calculation update every 10 minutes
       .mb-4
         .table-responsive
